{
  "version": 4,
  "terraform_version": "1.8.4",
  "serial": 203,
  "lineage": "59d6b371-2f1b-53c7-cab8-db082ed2369d",
  "resources": [
    {
      "mode": "data",
      "type": "aws_network_interface",
      "name": "nat_interface",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:730335431802:network-interface/eni-0a58f0ea4a79b1df5",
            "association": [
              {
                "ip_owner_id": "amazon",
                "public_ip": "54.232.251.244"
              }
            ],
            "attachment": [
              {
                "attachment_id": "eni-attach-050d62e4a4bce8ea8",
                "device_index": 0,
                "instance_id": "i-071bcd2364b6e8694",
                "instance_owner_id": "730335431802"
              }
            ],
            "availability_zone": "sa-east-1a",
            "filter": [
              {
                "name": "attachment.instance-id",
                "values": [
                  "i-071bcd2364b6e8694"
                ]
              }
            ],
            "id": "eni-0a58f0ea4a79b1df5",
            "interface_type": "interface",
            "mac_address": "02:69:ae:38:38:a9",
            "owner_id": "730335431802",
            "private_ip": "192.168.2.32",
            "private_ips": [
              "192.168.2.32"
            ],
            "security_groups": [
              "sg-0904603887147619f"
            ],
            "subnet_id": "subnet-0341fe2478770a4ee",
            "vpc_id": "vpc-0bd688e1ba1bb0a1c"
          }
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:730335431802:network-interface/eni-07f7dc74099da6b36",
            "association": [
              {
                "ip_owner_id": "amazon",
                "public_ip": "15.229.159.18"
              }
            ],
            "attachment": [
              {
                "attachment_id": "eni-attach-0fe8d4dfc81c6a4c2",
                "device_index": 0,
                "instance_id": "i-08321fc11580f4780",
                "instance_owner_id": "730335431802"
              }
            ],
            "availability_zone": "sa-east-1b",
            "filter": [
              {
                "name": "attachment.instance-id",
                "values": [
                  "i-08321fc11580f4780"
                ]
              }
            ],
            "id": "eni-07f7dc74099da6b36",
            "interface_type": "interface",
            "mac_address": "06:21:f5:36:d6:43",
            "owner_id": "730335431802",
            "private_ip": "192.168.4.45",
            "private_ips": [
              "192.168.4.45"
            ],
            "security_groups": [
              "sg-0904603887147619f"
            ],
            "subnet_id": "subnet-0f0db1f9725bb1dc1",
            "vpc_id": "vpc-0bd688e1ba1bb0a1c"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e23585d207c8fc8d",
            "arn": "arn:aws:ec2:sa-east-1:730335431802:instance/i-0b938cefb5bb22e97",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b938cefb5bb22e97",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "chave_de_acesso",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-072ed55e69624714e",
            "private_dns": "ip-192-168-4-206.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.4.206",
            "public_ip": "18.230.131.143",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags_all": {
                  "ambiente": "desenvolvimento",
                  "criado-por": "terraform"
                },
                "throughput": 0,
                "volume_id": "vol-0d749fa0238c0eab4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-00e8d52297f7cf298"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0f0db1f9725bb1dc1",
            "tags": {
              "Name": "bastion"
            },
            "tags_all": {
              "Name": "bastion",
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-00e8d52297f7cf298"
            ]
          },
          "dependencies": [
            "aws_security_group.site_sg",
            "aws_subnet.subnets_publicas",
            "aws_vpc.vpc_site",
            "data.aws_ami.ubuntu",
            "data.aws_key_pair.chave"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nat_instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d2b872bd98d125e5",
            "arn": "arn:aws:ec2:sa-east-1:730335431802:instance/i-071bcd2364b6e8694",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-071bcd2364b6e8694",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "chave_de_acesso",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a58f0ea4a79b1df5",
            "private_dns": "ip-192-168-2-32.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.2.32",
            "public_ip": "54.232.251.244",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags_all": {
                  "ambiente": "desenvolvimento",
                  "criado-por": "terraform"
                },
                "throughput": 0,
                "volume_id": "vol-077ddfaf72b95098b",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0904603887147619f"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0341fe2478770a4ee",
            "tags": {
              "Name": "nat-instance-1a"
            },
            "tags_all": {
              "Name": "nat-instance-1a",
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0904603887147619f"
            ]
          },
          "dependencies": [
            "aws_security_group.nat_sg",
            "aws_subnet.subnets_publicas",
            "aws_vpc.vpc_site",
            "data.aws_key_pair.chave"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0d2b872bd98d125e5",
            "arn": "arn:aws:ec2:sa-east-1:730335431802:instance/i-08321fc11580f4780",
            "associate_public_ip_address": true,
            "availability_zone": "sa-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08321fc11580f4780",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "chave_de_acesso",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07f7dc74099da6b36",
            "private_dns": "ip-192-168-4-45.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.4.45",
            "public_ip": "15.229.159.18",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "tags_all": {
                  "ambiente": "desenvolvimento",
                  "criado-por": "terraform"
                },
                "throughput": 0,
                "volume_id": "vol-019efba01dabc01c8",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0904603887147619f"
            ],
            "source_dest_check": false,
            "subnet_id": "subnet-0f0db1f9725bb1dc1",
            "tags": {
              "Name": "nat-instance-1b"
            },
            "tags_all": {
              "Name": "nat-instance-1b",
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0904603887147619f"
            ]
          },
          "dependencies": [
            "aws_security_group.nat_sg",
            "aws_subnet.subnets_publicas",
            "aws_vpc.vpc_site",
            "data.aws_key_pair.chave"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e23585d207c8fc8d",
            "arn": "arn:aws:ec2:sa-east-1:730335431802:instance/i-0b973a02daafeb0a5",
            "associate_public_ip_address": false,
            "availability_zone": "sa-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b973a02daafeb0a5",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "chave_de_acesso",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0a60590fa4dbc7d5d",
            "private_dns": "ip-192-168-1-215.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.1.215",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags_all": {
                  "ambiente": "desenvolvimento",
                  "criado-por": "terraform"
                },
                "throughput": 0,
                "volume_id": "vol-0a18c9ba46f43cea9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04f15ed60aeae1d88",
              "sg-05c0b3cfe55409b55"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-032ebf988a7817f02",
            "tags": {
              "Name": "app-1a"
            },
            "tags_all": {
              "Name": "app-1a",
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04f15ed60aeae1d88",
              "sg-05c0b3cfe55409b55"
            ]
          },
          "dependencies": [
            "aws_security_group.site_sg",
            "aws_subnet.subnets_privadas",
            "aws_vpc.vpc_site",
            "data.aws_ami.ubuntu",
            "data.aws_key_pair.chave"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0e23585d207c8fc8d",
            "arn": "arn:aws:ec2:sa-east-1:730335431802:instance/i-0aac0ef68211a8807",
            "associate_public_ip_address": false,
            "availability_zone": "sa-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0aac0ef68211a8807",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.nano",
            "ipv6_address_count": 0,
            "key_name": "chave_de_acesso",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-05a62c23c03513249",
            "private_dns": "ip-192-168-3-197.sa-east-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "192.168.3.197",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "tags_all": {
                  "ambiente": "desenvolvimento",
                  "criado-por": "terraform"
                },
                "throughput": 0,
                "volume_id": "vol-0aaa1a6dccee722f9",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-04f15ed60aeae1d88",
              "sg-05c0b3cfe55409b55"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04f99db62bd9d4f86",
            "tags": {
              "Name": "app-1b"
            },
            "tags_all": {
              "Name": "app-1b",
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-04f15ed60aeae1d88",
              "sg-05c0b3cfe55409b55"
            ]
          },
          "dependencies": [
            "aws_security_group.site_sg",
            "aws_subnet.subnets_privadas",
            "aws_vpc.vpc_site",
            "data.aws_ami.ubuntu",
            "data.aws_key_pair.chave"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw_site",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:730335431802:internet-gateway/igw-069fad2a8a61c1824",
            "id": "igw-069fad2a8a61c1824",
            "owner_id": "730335431802",
            "tags": {
              "Name": "igw_site"
            },
            "tags_all": {
              "Name": "igw_site",
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            },
            "vpc_id": "vpc-0bd688e1ba1bb0a1c"
          },
          "dependencies": [
            "aws_vpc.vpc_site"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb_site",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:730335431802:loadbalancer/app/alb-site/e7177eefce56d218",
            "arn_suffix": "app/alb-site/e7177eefce56d218",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "alb-site-1824271101.sa-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "id": "arn:aws:elasticloadbalancing:sa-east-1:730335431802:loadbalancer/app/alb-site/e7177eefce56d218",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "alb-site",
            "preserve_host_header": false,
            "security_groups": [
              "sg-05c0b3cfe55409b55"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0341fe2478770a4ee"
              },
              {
                "subnet_id": "subnet-0f0db1f9725bb1dc1"
              }
            ],
            "subnets": [
              "subnet-0341fe2478770a4ee",
              "subnet-0f0db1f9725bb1dc1"
            ],
            "tags_all": {
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            },
            "vpc_id": "vpc-0bd688e1ba1bb0a1c",
            "xff_header_processing_mode": "append",
            "zone_id": "Z2P70J7HTTTPLU"
          },
          "dependencies": [
            "aws_security_group.site_sg",
            "aws_subnet.subnets_publicas",
            "aws_vpc.vpc_site"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:730335431802:listener/app/alb-site/e7177eefce56d218/d7ff01ece8862578",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:730335431802:targetgroup/tg-site/5e4df38770b0185b",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:730335431802:listener/app/alb-site/e7177eefce56d218/d7ff01ece8862578",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:sa-east-1:730335431802:loadbalancer/app/alb-site/e7177eefce56d218",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb_site",
            "aws_lb_target_group.tg_site",
            "aws_security_group.site_sg",
            "aws_subnet.subnets_publicas",
            "aws_vpc.vpc_site"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg_site",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:sa-east-1:730335431802:targetgroup/tg-site/5e4df38770b0185b",
            "arn_suffix": "targetgroup/tg-site/5e4df38770b0185b",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:sa-east-1:730335431802:targetgroup/tg-site/5e4df38770b0185b",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "tg-site",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags_all": {
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            },
            "target_failover": [
              {
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0bd688e1ba1bb0a1c"
          },
          "dependencies": [
            "aws_vpc.vpc_site"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "conexao_tg_site",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:sa-east-1:730335431802:targetgroup/tg-site/5e4df38770b0185b-20240611015949031900000007",
            "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:730335431802:targetgroup/tg-site/5e4df38770b0185b",
            "target_id": "i-0b973a02daafeb0a5"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_lb_target_group.tg_site",
            "aws_security_group.site_sg",
            "aws_subnet.subnets_privadas",
            "aws_vpc.vpc_site",
            "data.aws_ami.ubuntu",
            "data.aws_key_pair.chave"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:sa-east-1:730335431802:targetgroup/tg-site/5e4df38770b0185b-20240611015949192300000008",
            "target_group_arn": "arn:aws:elasticloadbalancing:sa-east-1:730335431802:targetgroup/tg-site/5e4df38770b0185b",
            "target_id": "i-0aac0ef68211a8807"
          },
          "dependencies": [
            "aws_instance.web",
            "aws_lb_target_group.tg_site",
            "aws_security_group.site_sg",
            "aws_subnet.subnets_privadas",
            "aws_vpc.vpc_site",
            "data.aws_ami.ubuntu",
            "data.aws_key_pair.chave"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "site_table_privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:730335431802:route-table/rtb-06126ba082027b85f",
            "id": "rtb-06126ba082027b85f",
            "owner_id": "730335431802",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-0a58f0ea4a79b1df5",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd688e1ba1bb0a1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.nat_instance",
            "aws_security_group.nat_sg",
            "aws_subnet.subnets_publicas",
            "aws_vpc.vpc_site",
            "data.aws_key_pair.chave",
            "data.aws_network_interface.nat_interface"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:730335431802:route-table/rtb-0e6d1586026831b1f",
            "id": "rtb-0e6d1586026831b1f",
            "owner_id": "730335431802",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "eni-07f7dc74099da6b36",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd688e1ba1bb0a1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_instance.nat_instance",
            "aws_security_group.nat_sg",
            "aws_subnet.subnets_publicas",
            "aws_vpc.vpc_site",
            "data.aws_key_pair.chave",
            "data.aws_network_interface.nat_interface"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "site_table_publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:730335431802:route-table/rtb-0084ac808875f2aa5",
            "id": "rtb-0084ac808875f2aa5",
            "owner_id": "730335431802",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-069fad2a8a61c1824",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd688e1ba1bb0a1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw_site",
            "aws_vpc.vpc_site"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "privadas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0409889b144b8f680",
            "route_table_id": "rtb-06126ba082027b85f",
            "subnet_id": "subnet-032ebf988a7817f02"
          },
          "dependencies": [
            "aws_instance.nat_instance",
            "aws_route_table.site_table_privada",
            "aws_security_group.nat_sg",
            "aws_subnet.subnets_privadas",
            "aws_subnet.subnets_publicas",
            "aws_vpc.vpc_site",
            "data.aws_key_pair.chave",
            "data.aws_network_interface.nat_interface"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02ca26a6aea7a0779",
            "route_table_id": "rtb-0e6d1586026831b1f",
            "subnet_id": "subnet-04f99db62bd9d4f86"
          },
          "dependencies": [
            "aws_instance.nat_instance",
            "aws_route_table.site_table_privada",
            "aws_security_group.nat_sg",
            "aws_subnet.subnets_privadas",
            "aws_subnet.subnets_publicas",
            "aws_vpc.vpc_site",
            "data.aws_key_pair.chave",
            "data.aws_network_interface.nat_interface"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "publicas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00f30ae7d67437a6e",
            "route_table_id": "rtb-0084ac808875f2aa5",
            "subnet_id": "subnet-0341fe2478770a4ee"
          },
          "dependencies": [
            "aws_internet_gateway.igw_site",
            "aws_route_table.site_table_publica",
            "aws_subnet.subnets_publicas",
            "aws_vpc.vpc_site"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-067b9e0c66b43c98f",
            "route_table_id": "rtb-0084ac808875f2aa5",
            "subnet_id": "subnet-0f0db1f9725bb1dc1"
          },
          "dependencies": [
            "aws_internet_gateway.igw_site",
            "aws_route_table.site_table_publica",
            "aws_subnet.subnets_publicas",
            "aws_vpc.vpc_site"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nat_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:730335431802:security-group/sg-0904603887147619f",
            "description": "nat-instance",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0904603887147619f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "nat-sg",
            "name_prefix": "",
            "owner_id": "730335431802",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd688e1ba1bb0a1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_site"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "site_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:730335431802:security-group/sg-00e8d52297f7cf298",
            "description": "libera o acesso para o bastion via ssh",
            "egress": [],
            "id": "sg-00e8d52297f7cf298",
            "ingress": [],
            "name": "ssh-bastion",
            "name_prefix": "",
            "owner_id": "730335431802",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd688e1ba1bb0a1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_site"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:730335431802:security-group/sg-05c0b3cfe55409b55",
            "description": "libera o acesso http e https para o alb",
            "egress": [],
            "id": "sg-05c0b3cfe55409b55",
            "ingress": [],
            "name": "web-alb",
            "name_prefix": "",
            "owner_id": "730335431802",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd688e1ba1bb0a1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_site"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:730335431802:security-group/sg-04f15ed60aeae1d88",
            "description": "libera o acesso para a ec2 pelo bastion na porta 22",
            "egress": [],
            "id": "sg-04f15ed60aeae1d88",
            "ingress": [],
            "name": "access-alb-ec2",
            "name_prefix": "",
            "owner_id": "730335431802",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd688e1ba1bb0a1c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc_site"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets_privadas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:730335431802:subnet/subnet-032ebf988a7817f02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "192.168.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-032ebf988a7817f02",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335431802",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rede_privada_1a"
            },
            "tags_all": {
              "Name": "rede_privada_1a",
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            },
            "vpc_id": "vpc-0bd688e1ba1bb0a1c"
          },
          "dependencies": [
            "aws_vpc.vpc_site"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:730335431802:subnet/subnet-04f99db62bd9d4f86",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "192.168.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04f99db62bd9d4f86",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "730335431802",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rede_privada_1b"
            },
            "tags_all": {
              "Name": "rede_privada_1b",
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            },
            "vpc_id": "vpc-0bd688e1ba1bb0a1c"
          },
          "dependencies": [
            "aws_vpc.vpc_site"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnets_publicas",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:730335431802:subnet/subnet-0341fe2478770a4ee",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1a",
            "availability_zone_id": "sae1-az1",
            "cidr_block": "192.168.2.0/25",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0341fe2478770a4ee",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335431802",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rede_publica_1a"
            },
            "tags_all": {
              "Name": "rede_publica_1a",
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            },
            "vpc_id": "vpc-0bd688e1ba1bb0a1c"
          },
          "dependencies": [
            "aws_vpc.vpc_site"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:730335431802:subnet/subnet-0f0db1f9725bb1dc1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "sa-east-1b",
            "availability_zone_id": "sae1-az2",
            "cidr_block": "192.168.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f0db1f9725bb1dc1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "730335431802",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "rede_publica_1b"
            },
            "tags_all": {
              "Name": "rede_publica_1b",
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            },
            "vpc_id": "vpc-0bd688e1ba1bb0a1c"
          },
          "dependencies": [
            "aws_vpc.vpc_site"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc_site",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:730335431802:vpc/vpc-0bd688e1ba1bb0a1c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "192.168.0.0/16",
            "default_network_acl_id": "acl-03080014ac9a7476b",
            "default_route_table_id": "rtb-0df7af6de64982f9e",
            "default_security_group_id": "sg-0763ae28a72de6930",
            "dhcp_options_id": "dopt-0f6055dc455e6b2c9",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bd688e1ba1bb0a1c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0df7af6de64982f9e",
            "owner_id": "730335431802",
            "tags": {
              "Name": "vpc-site"
            },
            "tags_all": {
              "Name": "vpc-site",
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "regras",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:730335431802:security-group-rule/sgr-0ff4316b35d851b3c",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-0ff4316b35d851b3c",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00e8d52297f7cf298",
            "security_group_rule_id": "sgr-0ff4316b35d851b3c",
            "tags": null,
            "tags_all": {
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.site_sg",
            "aws_vpc.vpc_site"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:730335431802:security-group-rule/sgr-05aeb336ae4a5196f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-05aeb336ae4a5196f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05c0b3cfe55409b55",
            "security_group_rule_id": "sgr-05aeb336ae4a5196f",
            "tags": null,
            "tags_all": {
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.site_sg",
            "aws_vpc.vpc_site"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:730335431802:security-group-rule/sgr-04787ca26124e9c86",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-04787ca26124e9c86",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04f15ed60aeae1d88",
            "security_group_rule_id": "sgr-04787ca26124e9c86",
            "tags": null,
            "tags_all": {
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            },
            "to_port": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.site_sg",
            "aws_vpc.vpc_site"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "regras",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "access-alb-ec2-22-3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:730335431802:security-group-rule/sgr-0894f4bdf55febb0a",
            "cidr_ipv4": "192.168.0.0/16",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0894f4bdf55febb0a",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-04f15ed60aeae1d88",
            "security_group_rule_id": "sgr-0894f4bdf55febb0a",
            "tags": null,
            "tags_all": {
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.site_sg",
            "aws_vpc.vpc_site"
          ]
        },
        {
          "index_key": "ssh-bastion-22-0",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:730335431802:security-group-rule/sgr-0278a017aab3661fa",
            "cidr_ipv4": "177.235.146.210/32",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 22,
            "id": "sgr-0278a017aab3661fa",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-00e8d52297f7cf298",
            "security_group_rule_id": "sgr-0278a017aab3661fa",
            "tags": null,
            "tags_all": {
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            },
            "to_port": 22
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.site_sg",
            "aws_vpc.vpc_site"
          ]
        },
        {
          "index_key": "web-alb-443-2",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:730335431802:security-group-rule/sgr-082f65e2cdc14bff8",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-082f65e2cdc14bff8",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05c0b3cfe55409b55",
            "security_group_rule_id": "sgr-082f65e2cdc14bff8",
            "tags": null,
            "tags_all": {
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            },
            "to_port": 443
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.site_sg",
            "aws_vpc.vpc_site"
          ]
        },
        {
          "index_key": "web-alb-80-1",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:sa-east-1:730335431802:security-group-rule/sgr-0081a50b75020f655",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0081a50b75020f655",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "security_group_id": "sg-05c0b3cfe55409b55",
            "security_group_rule_id": "sgr-0081a50b75020f655",
            "tags": null,
            "tags_all": {
              "ambiente": "desenvolvimento",
              "criado-por": "terraform"
            },
            "to_port": 80
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.site_sg",
            "aws_vpc.vpc_site"
          ]
        }
      ]
    }
  ]
}